# ai-cockpit

./: .cursor-review.yml  .gitignore  AGENTS.md  AUTOMATION_PROMPT.md  README.md  pyproject.toml
docs/: AI_COCKPIT_IMPLEMENTATION_PLAN_V0.md  AI_COCKPIT_SPEC_V1.md  ARCHITECTURE.md  B_10_CURSOR_ROLE_BACKENDS_CONTRACT.md  B_2_CONTRACT.md  B_3_CONTRACT.md  B_4_CONTRACT.md  B_5_CONTRACT.md  B_6_CONTRACT.md  B_9_INTERACTIVE_PLANNER_CONTRACT.md  ROADMAP.md  V0_2_COMPLETION.md  V0_3_MILESTONES.md  V0_3_STATUS.md  V0_4_EXIT_EVIDENCE.md  V0_5_ROADMAP.md  V0_5_ROW_10_CLI_ERGONOMICS_CONTRACT.md  V0_5_ROW_11_CHAT_MODE_CONTRACT.md  V0_5_ROW_1_PLANNER_REPLAN_CONTRACT.md  V0_5_ROW_2_REVIEWER_FINDINGS_CONTRACT.md  V0_5_ROW_3_PROMPT_COVERAGE_CONTRACT.md  V0_5_ROW_5_PLANNER_SELF_CHECK_CONTRACT.md  V0_5_ROW_6_PLAN_CWD_CONTEXT_CONTRACT.md
scripts/: v0_4_exit_gate.sh
tests/: test_aider_worker.py  test_chat_cli.py  test_chat_cursor.py  test_checkpoint.py  test_checkpoint_resume.py  test_cli_flags.py  test_cli_status.py  test_cost.py  test_cursor_adapter.py  test_cursor_planner.py  test_cursor_reviewer.py  test_cursor_worker.py  test_cursor_writer.py  test_demo_fixture.py  test_dirty_tree_precheck.py  test_graph_smoke.py  test_init_subcommand.py  test_interactive_planner_cli.py  test_interactive_planner_llm.py  test_interactive_planner_tools.py  test_llm_planner_reviewer.py  test_memory_cli.py  test_memory_loader.py  test_memory_suggestions.py  test_plan_run.py  test_plan_schema.py  test_plans_cli.py  test_project_config.py  test_project_config_cli.py  test_prompt_override.py  (+4 more)
(+64 files in other folders)
