[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cockpit"
version = "0.1.0"
description = "Personal AI workflow management layer (v0.1 vertical slice)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "AI Cockpit" }]
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "langgraph>=0.2",
    "langchain-core>=0.3",
]

[project.optional-dependencies]
# Optional providers; install only when --llm anthropic|openai|auto is used.
anthropic = ["langchain-anthropic>=0.2"]
openai = ["langchain-openai>=0.2"]
llm = ["langchain-anthropic>=0.2", "langchain-openai>=0.2"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
ai-cockpit = "ai_cockpit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict_optional = true
ignore_missing_imports = true
